# AutomatasTP

./: CMakeLists.txt  README.md  archivo.c  archivo.h  arreglo.c  arreglo.h  automata.c  automata.h  linkedlist.c  linkedlist.h  main.c  origin.txt
Main1/: main.c  runPertenece.c
Main10/: minigrep.c
Main2/: main.c
Main3/: runAFNDtoAFD.c
Main4/: runUnion.c
Main5/: runConcatenacion.c
Main6/: runClausuraKlenne.c
Main7/: runMinimizacion.c
Main8/: parserDescRec.c  parserDescendente.c
Main9/: parserDescRecAFND.c
MainPrincipal/: linkedlist.c
MainSecundario/: Main.c  a.out  archivo.c  archivo.h  aut.txt  origin.txt
